1.0.0
-----

- Initial version:
Enum
CursorRequest
CursorResponse