@@ -1,1 +1,1 @@
-http://github.com/saritasa/php-utils/contributors
+http://github.com/saritasa/php-common/contributors
