@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "league/fractal": "^0.15.0"
+        "php": ">=7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7"
