@@ -1,0 +1,10 @@
+<?php
+
+namespace Saritasa\Exceptions;
+
+/**
+ * Thrown, if paging error happened
+ */
+class PagingException extends \Exception
+{
+}
