@@ -1,0 +1,10 @@
+<?php
+
+namespace Saritasa\Exceptions;
+
+/**
+ * Thrown, if payment operation could not be performed
+ */
+class PaymentException extends \Exception
+{
+}
